--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "@ionic-native/splash-screen": "^4.5.2",
     "@ionic-native/status-bar": "^4.5.2",
     "@ionic/storage": "^2.1.3",
-    "@ngx-translate/core": "^9.0.2",
+    "@ngx-translate/core": "9.0.2",
     "@ngx-translate/http-loader": "2.0.0",
     "@types/ionic": "0.0.35",
     "@types/lodash": "4.14.91",
     "@types/sha1": "^1.1.1",
     "angular4-social-login": "^1.1.0",
     "angularfire2": "^5.0.0-rc.4",
-    "firebase": "^4.8.1",
+    "firebase": "4.8.0",
     "imgcache.js": "^1.1.1",
     "ionic-angular": "3.9.2",
     "js-sha1": "^0.5.0",
