--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "js-sha1": "^0.5.0",
     "lodash": "4.17.4",
     "moment": "^2.20.1",
+    "ngx-pagination": "3.0.3",
     "rxjs": "5.5.2",
     "zone.js": "0.8.18"
   },
