--- a/config/package.json
+++ b/config/package.json
@@ -1,16 +1,18 @@
 {
   "name": "ng-prov",
-  "version": "0.0.58",
+  "version": "0.0.60",
   "description": "",
   "main": "index.js",
   "dependencies": {
     "lodash": "4.17.4",
     "moment": "2.20.1",
     "ngx-pagination": "3.0.3",
+    "@ionic/storage": "2.1.3",
     "@ionic-native/splash-screen": "4.5.2",
     "@ionic-native/status-bar": "4.5.2",
     "@ngx-translate/core": "9.0.2",
     "@ngx-translate/http-loader": "2.0.0",
+    "@ionic-native/core": "4.5.2",
     "@ionic-native/facebook":"4.5.2",
     "@ionic-native/google-plus":"4.5.2",
     "@ionic-native/network":"4.5.2",
